# reader-assistant

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt  run.sh
reader/: __init__.py  assistant.py
reader/db/: base.py  base_class.py  models.py  session.py
reader/handlers/: __init__.py
reader/logs/: log-2022-03-04-17-21.txt  log-2022-03-04-17-22.txt  log-2022-03-04-17-33.txt  log-2022-03-04-17-56.txt  log-2022-03-04-18-23.txt  log-2022-03-04-18-24.txt  log-2022-03-04-18-29.txt  log-2022-03-04-18-30.txt  log-2022-03-04-18-33.txt  log-2022-03-04-19-21.txt  log-2022-03-04-19-22.txt
reader/plugins/: chat_history.py  command.py  invite_rooms.py  sample-16k.silk  scheduling_tasks.py  speech_to_text.py
