[tool.poetry]
name = "reader-assistant"
version = "0.1.0"
description = ""
authors = ["hiro <pan.lin@aminer.cn>"]

[tool.poetry.dependencies]
python = "^3.8"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
